312/400 test cases passed

--- a/A1/index.html
+++ b/A1/index.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
-<!--
-  CSC309 Assignment 1
-  
-  University of Toronto
-  Fall 2025
--->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,6 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- TODO: complete me --> 
+  <header>
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <div class="portrait-frame">
+      <img src="20230902_153955.jpg" alt="Portrait of me">
+    </div>
+    <h1>Hi, I'm Tushar!</h1>
+    <p>I'm a full stack developer based in Toronto.</p>
+    <a href="about.html" class="btn">Learn More</a>
+  </main>
+  <footer>
+    <p>Copyright 2025 by patangem.</p>
+  </footer>
 </body>
 </html>
