--- a/A1/contact.html
+++ b/A1/contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
     <nav>
       <a href="index.html">Home</a>
@@ -14,33 +15,46 @@
       <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
+
+  <!-- Main content -->
   <main>
     <div class="portrait-frame">
-      <img src="20230902_153955.jpg" alt="Portrait of me">
+      <img src="portrait.jpg" alt="Portrait of me">
     </div>
+
     <h1>Tushar Rao</h1>
-    <a href="mailto:tushar.rao@mail.utoronto.ca?subject=Bug%20Found&body=I%20found%20the%20following%20bug%20on%20your%20website:%0A%0A" 
-       class="email-link">tushar.rao@mail.utoronto.ca</a>
+
+    <a href="mailto:tushar.rao@mail.utoronto.ca?subject=Bug%20Found&body=I%20found%20the%20following%20bug%20on%20your%20website:%0A%0A"
+       class="email-link">
+       tushar.rao@mail.utoronto.ca
+    </a>
+
     <form action="https://postman-echo.com/post" method="POST" enctype="multipart/form-data">
-      <div>
+      <div class="form-row">
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
       </div>
-      <div>
+
+      <div class="form-row">
         <label for="feedback">Feedback:</label>
-        <textarea id="feedback" name="feedback" rows="4" placeholder="Enter your feedback here" required></textarea>
+        <textarea id="feedback" name="feedback" rows="4"
+                  placeholder="Enter your feedback here" required></textarea>
       </div>
-      <div>
+
+      <div class="form-row">
         <label for="attachments">Attachment:</label>
         <input type="file" id="attachments" name="attachments" required>
       </div>
+
       <div class="checkbox-row">
         <input type="checkbox" name="consent" value="yes" required>
         <span class="agree-text">You agree to receive emails from me</span>
       </div>
+
       <button type="submit" class="btn">Send Feedback</button>
     </form>
   </main>
+
   <footer>
     <p>Copyright 2025 by patangem.</p>
   </footer>
