--- a/A1/index.html
+++ b/A1/index.html
@@ -1,4 +1,7 @@
+
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,23 +10,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
-  <main>
-    <div class="portrait-frame">
-      <img src="20230902_153955.jpg" alt="Portrait of me">
-    </div>
-    <h1>Hi, I'm Tushar!</h1>
-    <p>I'm a full stack developer based in Toronto.</p>
-    <a href="about.html" class="btn">Learn More</a>
-  </main>
-  <footer>
+  <!-- TODO: complete me --> 
+   <div>
+    <header>
+      <nav>
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <div class="profile">
+        <img src="20230902_153955.jpg" alt="self portrait">
+      </div>
+      <h1 class="intro">Hi, I'm Tushar!</h1>
+      <p class="intro-sub">I'm a full stack developer based in Toronto.</p>
+      <a href="about.html" class="about-button">Learn More</a>
+   </main>
+   <footer>
     <p>Copyright 2025 by patangem.</p>
   </footer>
+   </div>
+
 </body>
 </html>
