Passed all test cases

--- a/A1/contact.html
+++ b/A1/contact.html
@@ -19,7 +19,7 @@
   <!-- Main content -->
   <main>
     <div class="portrait-frame">
-      <img src="portrait.jpg" alt="Portrait of me">
+      <img src="20230902_153955.jpg" alt="Portrait of me">
     </div>
 
     <h1>Tushar Rao</h1>
@@ -35,11 +35,11 @@
         <input type="email" id="email" name="email" required>
       </div>
 
-      <div class="form-row">
-        <label for="feedback">Feedback:</label>
-        <textarea id="feedback" name="feedback" rows="4"
-                  placeholder="Enter your feedback here" required></textarea>
-      </div>
+     <div class="form-row feedback-row">
+  <label for="feedback">Feedback:</label>
+  <textarea id="feedback" name="feedback" rows="4"
+            placeholder="Enter your feedback here" required></textarea>
+</div>
 
       <div class="form-row">
         <label for="attachments">Attachment:</label>
@@ -51,7 +51,7 @@
         <span class="agree-text">You agree to receive emails from me</span>
       </div>
 
-      <button type="submit" class="btn">Send Feedback</button>
+      <button type="submit" class="feedback-btn">Send Feedback</button>
     </form>
   </main>
 
